	returns and which shortcut_init() "sneakily" sets.
	* src/{proto.h,files.c,global.c,nano.c,rcfile.c}: Drop the obsolete
	argument of shortcut_init(), and remove two unneeded calls of it.
	* src/global.c (shortcut_init): Allow M-J after an --enable-justify.
	* src/rcfile.c (parse_rcfile): The user documentation only speaks
	of options, not of flags.  Make the error messages conform.

2014-04-06  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init): Limit M-T (cut-till-end-of-file) to
	the main menu, and M-J (full-justify) to the main and search menus.
	* src/proto.h: There is no need for the helpline tags to be external,
	they are only ever used in src/global.c.
	* src/global.c: Do not set any helpline tags to empty strings;
	compilation should fail if they are needed and not defined.

2014-04-05  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (version): Print the correct configuration options.
	* src/{chars.c,nano.c,text.c}: Cosmetic tweaks.
	* doc/texinfo/nano.texi: Adjust for new disabling config options.

2014-04-05  Mike Frysinger  <vapier@gentoo.org>
	* src/nano.c (do_input): Reload possibly freed function pointer.

2014-04-04  Benno Schulenberg  <bensberg@justemail.net>
	* src/{files.c,nano.c}: Avoid two more compilation warnings.
	* configure.ac: Allow --enable-extra and --enable-multibuffer
	to override --enable-tiny.
	* src/rcfile.c (check_vitals_mapped): Do not allow 'set quiet'
	to suppress a fatal-error message, make sure the user sees it.
	* src/color.c: Comment tweaks.
	* src/{*.h,*.c}, configure.ac:Convert all occurrences of
	#ifdef ENABLE_COLOR to #ifndef DISABLE_COLOR.
	* src/nano.h: Comment tweaks.
	* configure.ac: Move the enabling stuff to after the disablers.
	* configure.ac: Add submissive colour disabling to --enable-tiny.
	* configure.ac: Allow other enablers to override --enable-tiny too.
	* src/{proto.h,search.c}: Fix compilation with --enable-browser.